# wolges-tournament-server

./: .env.example  .gitignore  ARQUITECTURA_SUPABASE.md  Cargo.toml  DEPLOY_MASLEXICO.md  DIGRAPH_BUG_REPORT.md  FISE2016_converted.kwg  IMPLEMENTATION_NOTES.md  Procfile  README.md  SOLUTION_PROPOSAL.md  SUPABASE_MIGRATION_CONTEXT.md  add_processed_column.sql  check_letters.sh  comprehensive_test.sh  debug_board.sh  dev-watch.sh  final_test.sh  fix_player_plays_schema.sql  fix_supabase_columns.sql  generate-cert.sh  generate_public_link.sh  index.html  index.html.backup  index.html.original  install_mcp_puppeteer.sh  player.html  player_html_changes.md  railway.toml  reglamento_analisis_mejoras.md  run-server.sh  server.stderr  server.stdout  start-https.sh  start-tournament.sh  start_tournament.sh  supabase_schema.sql  test-rack-residue.sh  test_alphabet.rs  test_alphabet_info.sh  (+47 more)
certs/: cert.pem  key.pem
netlify-player/: index.html  index_temp.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts
netlify-player/netlify-player/src/: App.css  App.tsx  index.css  main.tsx
netlify-player/public/: ads.txt  manifest.json  test-supabase.html  trie-builder.worker.js
netlify-player/public/torneo-duplicada/: player.html
netlify-player/src/components/: Anagramador.tsx  DebugEquity.tsx  GlobalSettingsMenu.tsx  Lists.tsx  ModuleSelector.tsx  ProductionFilter.tsx  WordValidator.tsx
netlify-player/src/hooks/: useAnagramSearch.ts  useBackgroundTrie.ts  useHybridAnagramSearch.ts  useTrainingMode.ts
netlify-player/src/pages/: Index.tsx  Privacy.tsx
netlify-player/src/services/: CsvWordLoader.ts  HybridTrieService.ts  (+2 more)
src/: async_queue.rs  board_utils.rs  database.rs  game_helpers.rs  game_manager.rs  local_cache.rs  main.rs  models.rs  persistence.rs  persistence_mode.rs  routes.rs  supabase_poller.rs  test_digraphs.rs  tournament_manager.rs  tournament_manager_v2.rs  wolges_engine.rs
src/routes/: persistence_routes.rs
wolges/: Cargo.toml  ChatGPT Image Aug 12, 2025, 10_14_43 AM.png.pxz  FISE2016.kwg
wolges/src/: alphabet.rs  game_config.rs  lib.rs  main_build.rs  wasm_lib.rs
wolges/src/alphabets/: spanish_internal.txt
(+74 files in other folders)
