[package]
name = "wolges-tournament-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.2"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wolges - our Scrabble engine
wolges = { path = "../wolges" }

# Utilities
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

# Database (for tournament persistence)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
